package 创建型模式.抽象工厂模式;

public interface AbstractFactory {
    public AbstractProductA createProductA();
    public AbstractProductB createProductB();

}
