package 创建型模式.抽象工厂模式;

public class ConcreteProductB1 implements AbstractProductB {
}
